# openfang

./: Cargo.toml
crates/openfang-kernel/src/: kernel.rs  registry.rs  wizard.rs
crates/openfang-lossless-context/: Cargo.toml
crates/openfang-lossless-context/src/: compressor.rs  dag.rs  integration.rs  lib.rs  store.rs  tools.rs
crates/openfang-runtime/: Cargo.toml
crates/openfang-runtime/src/: agent_loop.rs  kernel_handle.rs  lcm_adapter.rs  lib.rs
crates/openfang-types/src/: agent.rs  context_plugin.rs  lib.rs
