[package]
name = "openfang-lossless-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lossless context management for OpenFang — DAG-based conversation compression"

[dependencies]
openfang-types = { path = "../openfang-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
